--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -21,7 +21,12 @@
         </ul>
         <ul class="right">
           <li><a href="/about">About</a></li>
-          <li><a href="/spots">View All Parking Spots</a></li>
+          {% if user.is_authenticated %}
+            <li><a href="/spots">View All Parking Spots</a></li>
+            <li><a href="{% url 'logout' %}">Log Out</a></li>
+          {% else %}
+            <li><a href="{% url 'login' %}">Log In</a></li>
+          {% endif %}
         </ul>
       </div>
     </nav>
