--- a/main_app/templates/spots/index.html
+++ b/main_app/templates/spots/index.html
@@ -6,7 +6,7 @@
 {% for spot in spots %}
   <div class="card">
     <div class="card-content">
-      <span class="card-title">{{ spot.location }}</span>
+      <span class="card-title">{{ spot.address }}</span>
       <p>Type: {{ spot.type }}</p>
       <p>Price: {{ spot.price }}</p>
       {% if spot.age > 0 %}
