--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -10,6 +10,7 @@
   <title>HotSpot</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 
 <body>
@@ -17,14 +18,18 @@
     <nav>
       <div class="nav-wrapper">
         <ul>
-          <li><a href="/" class="left brand-logo">&nbsp;&nbsp;HotSpot</a></li>
+          <li><a href=" url 'home' " class="left brand-logo">&nbsp;&nbsp;HotSpot</a></li>
         </ul>
         <ul class="right">
-          <li><a href="/about">About</a></li>
+          <li><a href=" url 'about' ">About HotSpot</a></li>
           {% if user.is_authenticated %}
-            <li><a href="/spots">View All Parking Spots</a></li>
+            {% comment %} <li><a href="{% url 'toys_create' %}">Add a Toy</a></li>
+            <li><a href="{% url 'toys_index' %}">View All Toys</a></li> {% endcomment %}
+            <li><a href="{% url 'spots_create' %}">Add a Parking Spot</a></li>
+            <li><a href="{% url 'index' %}">View All Parking Spots</a></li>
             <li><a href="{% url 'logout' %}">Log Out</a></li>
           {% else %}
+            <li><a href="{% url 'signup' %}">Sign Up</a></li>
             <li><a href="{% url 'login' %}">Log In</a></li>
           {% endif %}
         </ul>
@@ -36,7 +41,7 @@
     {% endblock %}
   </main>
   <footer class="page-footer">
-    <div class="right">All Rights Reserved, &copy; 2022 HotSpot - Arevmo Inc. &nbsp;</div>
+    <div class="right">All Rights Reserved, &copy; 2022 HotSpot - by Arevmo &nbsp;</div>
   </footer>
 </body>
 
