--- a/main_app/templates/spots/index.html
+++ b/main_app/templates/spots/index.html
@@ -5,16 +5,18 @@
 
 {% for spot in spots %}
   <div class="card">
-    <div class="card-content">
-      <span class="card-title">{{ spot.address }}</span>
-      <p>Type: {{ spot.type }}</p>
-      <p>Price: {{ spot.price }}</p>
-      {% if spot.age > 0 %}
-        <p>Age: {{ spot.age }}</p>
-      {% else %}
-        <p></p>
-      {% endif %}
-    </div>
+    <a href="/spots/{{ url 'detail' spot.id }}"></a>
+      <div class="card-content">
+        <span class="card-title">{{ spot.address }}</span>
+        <p>Type: {{ spot.type }}</p>
+        <p>Price: {{ spot.price }}</p>
+        {% comment %} {% if spot.age > 0 %}
+          <p>Age: {{ spot.age }}</p>
+        {% else %}
+          <p></p>
+        {% endif %} {% endcomment %}
+      </div>
+    </a>
   </div>
 {% endfor %}
 
