--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -23,8 +23,8 @@
         <ul class="right">
           <li><a href=" url 'about' ">About HotSpot</a></li>
           {% if user.is_authenticated %}
-            {% comment %} <li><a href="{% url 'toys_create' %}">Add a Toy</a></li>
-            <li><a href="{% url 'toys_index' %}">View All Toys</a></li> {% endcomment %}
+            <li><a href="{% url 'features_create' %}">Add a Feature</a></li>
+            <li><a href="{% url 'features_index' %}">View All Features</a></li>
             <li><a href="{% url 'spots_create' %}">Add a Parking Spot</a></li>
             <li><a href="{% url 'index' %}">View All Parking Spots</a></li>
             <li><a href="{% url 'logout' %}">Log Out</a></li>
