--- a/main_app/templates/main_app/feature_form.html
+++ b/main_app/templates/main_app/feature_form.html
@@ -2,15 +2,13 @@
 
 {% block content %}
 {% if object %}
-  <h1>Edit <span class="teal-text">{{feature.name}}</span></h1>
+  <h1>Edit <span class="teal-text">{{object.name}}</span></h1>
 {% else %}
   <h1>Add Feature</h1>
 {% endif %}
-<form action="" method="post">
-  <!-- Django requires the following for security purposes -->
+<form action="" method="POST">
   {% csrf_token %}
   <table>
-    <!-- Render the inputs inside of <tr>s & <td>s -->
     {{ form.as_table }}
   </table>
   <input type="submit" value="Submit!" class="btn">
