--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -18,10 +18,10 @@
     <nav>
       <div class="nav-wrapper">
         <ul>
-          <li><a href=" url 'home' " class="left brand-logo">&nbsp;&nbsp;HotSpot</a></li>
+          <li><a href="{% url 'home' %}" class="left brand-logo">&nbsp;&nbsp;HotSpot</a></li>
         </ul>
         <ul class="right">
-          <li><a href=" url 'about' ">About HotSpot</a></li>
+          <li><a href="{% url 'about' %}">About HotSpot</a></li>
           {% if user.is_authenticated %}
             <li><a href="{% url 'features_create' %}">Add a Feature</a></li>
             <li><a href="{% url 'features_index' %}">View All Features</a></li>
