--- a/main_app/templates/spots/detail.html
+++ b/main_app/templates/spots/detail.html
@@ -7,21 +7,17 @@
   <div class="col s6">
     <div class="card">
       <div class="card-content">
-        <span class="card-title">{{ cat.name }}</span>
-        <p>Breed: {{ cat.breed }}</p>
-        <p>Description: {{ cat.description }}</p>
-        {% if cat.age > 0 %}
-        <p>Age: {{ cat.age }}</p>
-        {% else %}
-        <p>Age: Kitten</p>
-        {% endif %}
+        <span class="card-title">{{ spot.address }}</span>
+        <p>Type: {{ spot.type }}</p>
+        <p>Price: {{ spot.price }}</p>
+        <p>Description: {{ spot.description }} </p>
       </div>
       <div class="card-action">
-        <a href="{% url 'cats_update' cat.id %}">Edit</a>
-        <a href="{% url 'cats_delete' cat.id %}">Delete</a>
+        <a href="{% url 'spots_update' spot.id %}">Edit</a>
+        <a href="{% url 'spots_delete' spot.id %}">Delete</a>
       </div>
     </div>
-    {% for photo in cat.photo_set.all %}
+    {% comment %} {% for photo in cat.photo_set.all %}
       <img class="responsive-img card-panel" src="{{photo.url}}">
     {% empty %}
       <div class="card-panel teal-text center-align">No Photos Uploaded</div>
@@ -31,32 +27,32 @@
       <input type="file" name="photo-file">
       <br><br>
       <input type="submit" class="btn" value="Upload Photo">
-    </form>
-  </div>
+    </form> 
+    </div>  {% endcomment %}
   <div class="col s6">
-    <form method="POST" action="{% url 'add_feeding' cat.id %}">
+    <form method="POST" action="{% url 'add_booking' spot.id %}">
       {% csrf_token %}
-      {{ feeding_form.as_p }}
-      <input type="submit" class="btn" value="Add Feeding">
+      {{ booking_form.as_p }}
+      <input type="submit" class="btn" value="Add Booking">
     </form>
     <br>
-    {% if cat.fed_for_today %}
-    <div class="card-panel teal-text center-align">{{cat.name}} has been fed all meals for today</div>
+    {% if spot.booked_for_today %}
+    <div class="card-panel teal-text center-align">{{spot.address}} Has been booked for today</div>
     {% else %}
-    <div class="card-panel red-text center-align">{{cat.name}} might be hungry</div>
+    <div class="card-panel red-text center-align">{{spot.address}} Available!</div>
     {% endif %}
     <table class="striped">
       <thead>
         <tr>
-          <th>Date</th>
-          <th>Meal</th>
+          <th>Booked From</th>
+          <th>Booked Until</th>
         </tr>
       </thead>
       <tbody>
-        {% for feeding in cat.feeding_set.all %}
+        {% for booking in spot.booking_set.all %}
         <tr>
-          <td>{{feeding.date}}</td>
-          <td>{{feeding.get_meal_display}}</td>
+          <td>{{booking.startdate}}</td>
+          <td>{{booking.enddate}}</td>
         </tr>
         {% endfor %}
       </tbody>
@@ -66,34 +62,34 @@
 <hr>
 <div class="row">
   <div class="col s6">
-    <h3>{{ cat.name }}'s Toys</h3>
-    {% if cat.toys.count %}
-    {% for toy in cat.toys.all %}
+    <h3> Features for: {{ spot.address }} </h3>
+    {% if spot.features.count %}
+    {% for feature in spot.features.all %}
     <div class="card">
       <div class="card-content">
         <span class="card-title">
-          A <span style="color: {{ toy.color }}">{{ toy.color }}</span> {{ toy.name }}
+          {{ feature.name }} 
         </span>
       </div>
     </div>
     {% endfor %}
     {% else %}
-    <h5>No Toys :(</h5>
+    <h5>No Available Features :(</h5>
     {% endif %}
   </div>
   <!-- Available toys will come after this line -->
   <div class="col s6">
-    <h3>Available Toys</h3>
-    {% if toys.count %}
-    {% for toy in toys.all %}
+    <h3>Available Features</h3>
+    {% if features.count %}
+    {% for feature in features.all %}
     <div class="card">
       <div class="card-content">
         <span class="card-title">
-          A <span style="color: {{ toy.color }}">{{ toy.color }}</span> {{ toy.name }}
+          {{ feature.name }}
         </span>
       </div>
       <div class="card-action">
-        <form action="{% url 'assoc_toy' cat.id toy.id %}" method="POST">
+        <form action="{% url 'assoc_feature' spot.id feature.id %}" method="POST">
           {% csrf_token %}
           <button type="submit" class="btn">Add</button>
         </form>
@@ -101,23 +97,9 @@
     </div>
     {% endfor %}
     {% else %}
-    <h5>{{cat.name}} Already Has All Toys Available</h5>
+    <h5>{{spot.address}} Already Has All Features Available</h5>
     {% endif %}
   </div>
 </div>
-<script>
-  // This JS is used to initialize materialize's datepicker input
-  const dateEl = document.getElementById('id_date')
-  M.Datepicker.init(dateEl, {
-    format: 'yyyy-mm-dd',
-    defaultDate: new Date(),
-    setDefaultDate: true,
-    autoClose: true
-  })
-
-  // This JS is used to initialize the select input tag in materialize
-  const selectEl = document.getElementById('id_meal');
-  M.FormSelect.init(selectEl);
-</script>
 
 {% endblock %}
