--- a/main_app/templates/spots/detail.html
+++ b/main_app/templates/spots/detail.html
@@ -17,18 +17,18 @@
         <a href="{% url 'spots_delete' spot.id %}">Delete</a>
       </div>
     </div>
-    {% comment %} {% for photo in cat.photo_set.all %}
+    {% for photo in spot.photo_set.all %}
       <img class="responsive-img card-panel" src="{{photo.url}}">
     {% empty %}
       <div class="card-panel teal-text center-align">No Photos Uploaded</div>
     {% endfor %}
-    <form action="{% url 'add_photo' cat.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
+    <form action="{% url 'add_photo' spot.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
       {% csrf_token %}
       <input type="file" name="photo-file">
       <br><br>
       <input type="submit" class="btn" value="Upload Photo">
     </form> 
-    </div>  {% endcomment %}
+    </div>
   <div class="col s6">
     <form method="POST" action="{% url 'add_booking' spot.id %}">
       {% csrf_token %}
