--- a/main_app/templates/spots/detail.html
+++ b/main_app/templates/spots/detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Cat Details</h1>
+<h1>Spot Details</h1>
 
 <div class="row">
   <div class="col s6">
@@ -12,29 +12,35 @@
         <p>Price: {{ spot.price }}</p>
         <p>Description: {{ spot.description }} </p>
       </div>
+      {% if spot.user == request.user %}
       <div class="card-action">
         <a href="{% url 'spots_update' spot.id %}">Edit</a>
         <a href="{% url 'spots_delete' spot.id %}">Delete</a>
       </div>
+      {% endif %}
     </div>
-    {% for photo in spot.photo_set.all %}
-      <img class="responsive-img card-panel" src="{{photo.url}}">
-    {% empty %}
-      <div class="card-panel teal-text center-align">No Photos Uploaded</div>
-    {% endfor %}
-    <form action="{% url 'add_photo' spot.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
-      {% csrf_token %}
-      <input type="file" name="photo-file">
-      <br><br>
-      <input type="submit" class="btn" value="Upload Photo">
-    </form> 
+      {% for photo in spot.photo_set.all %}
+        <img class="responsive-img card-panel" src="{{photo.url}}">
+      {% empty %}
+        <div class="card-panel teal-text center-align">No Photos Uploaded</div>
+      {% endfor %}
+    {% if spot.user == request.user %}
+      <form action="{% url 'add_photo' spot.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
+        {% csrf_token %}
+        <input type="file" name="photo-file">
+        <br><br>
+        <input type="submit" class="btn" value="Upload Photo">
+      </form> 
+    {% endif %}
     </div>
   <div class="col s6">
-    <form method="POST" action="{% url 'add_booking' spot.id %}">
-      {% csrf_token %}
-      {{ booking_form.as_p }}
-      <input type="submit" class="btn" value="Add Booking">
-    </form>
+    {% if spot.user == request.user %}
+      <form method="POST" action="{% url 'add_booking' spot.id %}">
+        {% csrf_token %}
+        {{ booking_form.as_p }}
+        <input type="submit" class="btn" value="Add Booking">
+      </form>
+    {% endif %}
     <br>
     {% if spot.booked_for_today %}
     <div class="card-panel teal-text center-align">{{spot.address}} Has been booked for today</div>
