updates All Spots & My Spots pages

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -20,5 +20,10 @@ nav {
 .card-image{
   display: flex;
   align-items: center;
-  height: 400px;
+  height: 100%;
+}
+
+.responsive-img {
+  max-width: 100%;
+  max-height: 100%;
 }
