--- a/main_app/templates/spots/myindex.html
+++ b/main_app/templates/spots/myindex.html
@@ -5,7 +5,9 @@
 
 <a href="{% url 'index' %}" class="waves-effect waves-light btn">All Listings</a>
 
+<div class="row">
 {% for spot in spots %}
+<div class="col s6 m6 l6">
   <div class="card">
     <a href="{% url 'detail' spot.id %}">
       <div class="card-content">
@@ -15,6 +17,8 @@
       </div>
     </a>
   </div>
+</div>
 {% endfor %}
+</div>
 
 {% endblock %}
