removes links from nav bar and updates detail page

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -23,10 +23,10 @@
         <ul>
           <li class="right"><a href="{% url 'about' %}">About</a></li>
           {% if user.is_authenticated %}
-            <li><a href="{% url 'spots_create' %}">List a Parking Spot</a></li>
-            <li><a href="{% url 'index' %}">Find Parking Spots</a></li>
-            <li><a href="{% url 'features_create' %}">Add a Feature</a></li>
-            <li><a href="{% url 'features_index' %}">View All Features</a></li>
+            <li><a href="{% url 'spots_create' %}">List a Spot</a></li>
+            <li><a href="{% url 'index' %}">Find a Spot</a></li>
+            <!-- <li><a href="{% url 'features_create' %}">Add a Feature</a></li> -->
+            <!-- <li><a href="{% url 'features_index' %}">View All Features</a></li> -->
             <li class="right"><a href="{% url 'logout' %}">Log Out</a></li>
           {% else %}
             <ul class="right">
