--- a/main_app/templates/main_app/feature_list.html
+++ b/main_app/templates/main_app/feature_list.html
@@ -14,4 +14,7 @@
 </a>
 {% endfor %}
 
+
+<button class="btn"><a style="color:white" href="{% url 'features_create' %}">Create a Feature</a></button>
+
 {% endblock %}
