--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>About HotSpot</h1>
+<h1 class="center">About HotSpot</h1>
 <hr />
-<p>HotSpot was made by Arevmo Group</p>
+<p class="center">HotSpot was made by Arevmo Group. Arevmo Group consists of three students -- Arturo, 
+Evan, and Mohamed -- from General Assembly's DTLA Software Engineering Immersive program. 
+This app was inspired by the countless hours of searching for parking throughout Los Angeles.</p>
 
 {% endblock %}
