--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -2,9 +2,9 @@
 {% block content %}
 
 <h1 class="center">About HotSpot</h1>
-<hr />
+<hr>
 <p class="center">HotSpot was made by Arevmo Group. Arevmo Group consists of three students -- Arturo, 
 Evan, and Mohamed -- from General Assembly's DTLA Software Engineering Immersive program. 
 This app was inspired by the countless hours of searching for parking throughout Los Angeles.</p>
-
+<!-- delete -->
 {% endblock %}
