--- a/main_app/templates/spots/index.html
+++ b/main_app/templates/spots/index.html
@@ -2,7 +2,7 @@
 {% block content %}
 
     
-<a href="{% url 'myindex' user.id %}" class="waves-effect waves-light btn right">MySpots</a>
+<a href="{% url 'myindex' user.id %}" class="btn-change waves-effect waves-light btn right">MySpots</a>
 <h2> All Spots</h2> 
 
 <div class="row">
