--- a/main_app/templates/spots/myindex.html
+++ b/main_app/templates/spots/myindex.html
@@ -3,7 +3,7 @@
 
 <h2>My Listings</h2>
 
-<a href="{% url 'index' %}" class="waves-effect waves-light btn">All Listings</a>
+<a href="{% url 'index' %}" class="btn-change waves-effect waves-light btn">All Listings</a>
 
 <div class="row">
 {% for spot in spots %}
