--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -50,3 +50,10 @@ footer.page-footer {
   max-width: 100%;
   max-height: 100%;
 }
+
+.btn-change {
+  border-radius: 50%;
+  background-color: #ff7043;
+  color: #0277bd;
+  font-size:larger;
+}
