--- a/main_app/templates/main_app/spot_form.html
+++ b/main_app/templates/main_app/spot_form.html
@@ -11,6 +11,6 @@
     <table>
       {{ form.as_table }}
     </table>
-    <input type="submit" value="Submit!" class="btn">
+    <input type="submit" value="Submit!" class="btn btn-change">
   </form>
 {% endblock %}
