--- a/main_app/templates/main_app/feature_detail.html
+++ b/main_app/templates/main_app/feature_detail.html
@@ -5,7 +5,7 @@
 
 <div class="row">
   <div class="col s6 col-offset-3">
-    <div class="card">
+    <div class="card card-change">
       <div class="card-content">
         <span class="card-title">{{ feature.name }}</span>
       </div>
