--- a/main_app/templates/main_app/feature_list.html
+++ b/main_app/templates/main_app/feature_list.html
@@ -5,7 +5,7 @@
 
 {% for feature in feature_list %}
 <a href="{% url 'features_detail' feature.id %}">
-  <div class="card">
+  <div class="card card-change">
     <div class="card-content">
       <span class="card-title">{{ feature.name }}</span>
     </div>
