--- a/main_app/templates/spots/detail.html
+++ b/main_app/templates/spots/detail.html
@@ -4,7 +4,7 @@
 <br><br>
 <div class="row">
   <div class="col s6 m6 l6">
-    <div class="card">
+    <div class="card card-change">
       <div class="card-content">
         <span class="card-title">{{ spot.address }}</span>
         <p>Type: {{ spot.type }}</p>
@@ -37,7 +37,7 @@
       <h3 class="center logo-style">Features</h3>
       {% if spot.features.count %}
       {% for feature in spot.features.all %}
-      <div class="card">
+      <div class="card card-change">
         <div class="card-content">
           <span class="card-title">
             {{ feature.name }}
@@ -54,7 +54,7 @@
         <h3 class="center logo-style">Add Features</h3>
         {% if features.count %}
         {% for feature in features.all %}
-        <div class="card">
+        <div class="card card-change">
           <div class="card-content center">
             <span class="card-title">
               {{ feature.name }}
@@ -78,7 +78,6 @@
     {% endif %}
   </div>
 </div>
-
 <hr>
 <div class="row">
   <div class="col s6">
@@ -101,7 +100,7 @@
         {% for booking in spot.booking_set.all %}
         <tr>
           <td>{{booking.date}}</td>
-          <td><input onclick="change()" type="button" class="btn btn-change" value="Available" id="1"></input></td>
+          <td><input type="button" class="btn btn-change" value="Available" id="1"></input></td>
         </tr>
         {% endfor %}
       </tbody>
@@ -110,7 +109,6 @@
 </div>
 
 <script>
-  // This JS is used to initialize materialize's datepicker input
   const dateEl = document.getElementById('id_date');
   M.Datepicker.init(dateEl, {
     format: 'yyyy-mm-dd',
@@ -118,13 +116,5 @@
     setDefaultDate: true,
     autoClose: true
   }); 
-
-  function change() 
-  {
-    // alert("{{booking.id}}")
-    var elem = document.getElementById("1");
-    if (elem.value=="Available") elem.value = "{{request.user}}";
-    else elem.value = "Available";
-  }
-
+</script>
 {% endblock %}
