--- a/main_app/templates/spots/index.html
+++ b/main_app/templates/spots/index.html
@@ -8,7 +8,7 @@
 <div class="row">
   {% for spot in spots %}
     <div class="col s6 m6 l6">
-      <div class="card large">
+      <div class="card large card-change">
         <a href="{% url 'detail' spot.id %}">
         <div class="card-image">
         {% for photo in spot.photo_set.all %}
