--- a/main_app/templates/spots/detail.html
+++ b/main_app/templates/spots/detail.html
@@ -19,12 +19,12 @@
       {% endif %}
     </div>
     {% for photo in spot.photo_set.all %}
-    <img class="responsive-img card-panel" src="{{photo.url}}">
+    <img class="responsive-img card-panel card-change" src="{{photo.url}}">
     {% empty %}
     <div class="card-panel teal-text center-align">No Photos Uploaded</div>
     {% endfor %}
     {% if spot.user == request.user %}
-    <form action="{% url 'add_photo' spot.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
+    <form action="{% url 'add_photo' spot.id %}" enctype="multipart/form-data" method="POST" class="card-panel card-change">
       {% csrf_token %}
       <input type="file" name="photo-file">
       <br><br>
